# boxnope

./: CMakeLists.txt  LICENSE  README.md
resources/: boxnope.qrc  boxnope_menu.xsd
src/: background.cpp  background.hpp  main.cpp  menu.cpp  menu.hpp  utils.hpp
